...
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:gravity="center_vertical"
                        android:text="@{context.getString(viewmodel.currentFilteringLabel)}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/tasks_list"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:items="@{viewmodel.items}"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
                </LinearLayout>

...
                </LinearLayout>
            </RelativeLayout>

        </notes.arch.practise.ScrollChildSwipeRefreshLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/ic_add"
            app:fabSize="normal"
            app:layout_anchor="@id/refresh_layout"
...
